--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18",
     "react-dom": "18",
     "register-service-worker": "^1.7.2",
+    "veaury": "2.5",
     "vue": "^3.4.18",
     "vue-i18n": "^11.0.0",
     "vue-router": "^4.0.12"
